podcasts, updated books.

--- a/static/stuff.css
+++ b/static/stuff.css
@@ -29,6 +29,10 @@ body {
     right: 30px;
     color: rgba(215, 185, 228);
 }
+#spotify-button {
+    background-image: url( 'static/buttons/listen-on-spotify.png' );
+
+}
 
 .kit {
     display: flex;
@@ -52,6 +56,7 @@ body {
     padding-right: 20px;
     padding-top: 40px;
     width: 100%;
+    
 }
 @media screen and (min-width: 960px) {
     .kit__content {
@@ -82,6 +87,8 @@ body {
     display: flex;
     flex-direction: column;
     margin-bottom: 85px;
+    text-align: center;
+    text-decoration: none;
 }
 .kit__recommendation-image {
     margin-bottom: 35px;
