--- a/static/base.css
+++ b/static/base.css
@@ -1,15 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 body {
-    display: flex;
-    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     font-family: Inconsolata, Helvetica;
     font-size: 12pt;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    background-color: rgba(215, 185, 228, 0.35);
+}
+
+div#contents {
+    z-index: 1000;
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    box-sizing: border-box;
 }
 
 pre {
